# file-rs

./: Cargo.toml
src/: main.rs
src/cmd/: compress.rs  find.rs  flow.rs  mod.rs  mv.rs  rm.rs
src/fsutil/: file.rs  filter.rs  input.rs  iter.rs  mod.rs  pathinfo.rs  util.rs
