[package]
name = "file-rs"
version = "0.1.0"
edition = "2021"
description = "A fast and safe file organizer and cleaner built with Rust."
license = "MIT"
repository = "https://github.com/gosunuts/file-rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
anyhow = "1.0.99"

[dev-dependencies]
tempfile = "3"
